<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_play"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_play" />

    <item
        android:id="@+id/navigation_rounds"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_rounds" />

    <item
        android:id="@+id/navigation_tournaments"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_tournaments" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />

</menu>
